[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprite/protrait/kang.png" type="Texture" id=1]
[ext_resource path="res://Scripts/player_one.gd" type="Script" id=2]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 7
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 7
font_data = ExtResource( 3 )

[node name="battle_player" type="HBoxContainer"]
margin_right = 72.0
margin_bottom = 52.0
rect_min_size = Vector2( 72, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 32.0
margin_bottom = 52.0

[node name="Player_name" type="Label" parent="VBoxContainer"]
margin_top = -1.0
margin_right = 32.0
margin_bottom = 11.0
rect_min_size = Vector2( 32, 12 )
custom_fonts/font = SubResource( 1 )
text = "Player "
align = 1
valign = 1

[node name="Player_health" type="Label" parent="VBoxContainer"]
margin_top = 15.0
margin_right = 32.0
margin_bottom = 27.0
rect_min_size = Vector2( 32, 12 )
custom_fonts/font = SubResource( 2 )

[node name="Player_selected" type="Label" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 32.0
margin_bottom = 43.0
rect_min_size = Vector2( 32, 12 )
custom_fonts/font = SubResource( 3 )

[node name="player_image" type="TextureButton" parent="."]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 0 )
texture_normal = ExtResource( 1 )
expand = true
[connection signal="pressed" from="player_image" to="." method="_on_player_image_pressed"]
